----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-05-26 Michal Čihař  <michal@cihar.com>
    * lang/norwegian: Update, thanks to Sven-Erik Andersen - sven-erik.
    * lang/estonian: Update thanks to Alvar Soome - finsoft.
    * lang/indonesian: Update thanks to Rachim Tamsjadi - tamsy.
    * lang/dutch: Update thanks to Ivo Teel - calimonk.
    * lang/german-utf-8: Remove duplicated string.
    * lang/*: Remove allow_recoding from non utf-8 translations.
    * tbl_properties.inc.php, tbl_properties_operations.php: PMA_DBI_num_rows
      is not needed and does not work with MYSQL_USE_RESULT (bug #952162).

2004-05-26 Alexander M. Turek  <me@derrabus.de>
    * translators.html: Linked to Indonesian translator's SF page instead of
      his email address.

2004-05-25 Michal Čihař  <michal@cihar.com>
    * main.php, libraries/select_lang.lib.php: Use pma_lang cookie instead of
      just lang.
    * libraries/select_lang.lib.php: Fix language dialects detection (based on
      patch #958994).

2004-05-23 Garvin Hicking <pma@supergarv.de>
    * db_details.php: Fixed broken file upload since redesign-patch.

2004-05-20 Michal Čihař  <michal@cihar.com>
    * many files: Little code reorganistaion (RFE #957308), removed some
      remaining php3 compatibility code in SQL parser.

2004-05-20 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php: set contents page (first page)'s orientation
      to the same asked for the data dictionary

2004-05-19 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_select.php: bug 956137, undefined $data: on the search page,
      PMA_foreignDropdown() must be called with no current value for
      the data

2004-05-19 Michal Čihař  <michal@cihar.com>
    * libraries/auth/cookie.auth.lib.php: Show login form in top frame.

2004-05-16 Alexander M. Turek  <me@derrabus.de>
    * db_details.php, db_details_structure.php, sql.php, tbl_indexes.php,